  required changing the .pyc magic number.  This means that .pyc files
  generated before 2.5c2 will be regenerated.

- with and as are now keywords.

- Bug #1664966: Fix crash in exec if Unicode filename can't be decoded.

- Issue #1537: Changed GeneratorExit's base class from Exception to
  BaseException.

Library
-------

- #1693149: trace.py --ignore-module - accept multiple comma-separated
  modules to be given.

- #1822: MIMEMultipart.is_multipart() behaves correctly for a just-created
  (and empty) instance. Thanks Jonathan Share.

- #1861: Added an attribute to the sched module which returns an ordered
  list of upcoming events (displayed as named tuples).

- #1837: The queue module now also supports a LIFO queue and a priority queue.

- Issue #1831: ctypes now raises a TypeError if conflicting positional
  and named arguments are passed to a Structure or Union initializer.
  When too many positional arguments are passed, also a TypeError is
  raised instead of a ValueError.

- Convert the internal ctypes array type cache to a WeakValueDict so
  that array types do not live longer than needed.

- Issue #1786: pdb should use its own stdin/stdout around an exec call
  and when creating a recursive instance.

- Issue #1698398 Zipfile.printdir() crashed because the format string
  expected a tuple type of length six instead of time.struct_time object.

- Issue #1780: The Decimal constructor now accepts arbitrary leading
  and trailing whitespace when constructing from a string.
  Context.create_decimal no longer accepts trailing newlines.

- Decimal.as_tuple(), difflib.find_longest_match() and inspect functions
  that returned a tuple now return a named tuple.

- Doctest now returns results as a named tuple for readability:  
      (0, 7) --> TestResults(failed=0, attempted=7)

- Issue #846388. re.match is interruptible now, which is particularly
  good for long regular expression matches.

- pyexpat, patch #1137: allow setting buffer_size attribute 